--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.6.0",
+    "astro-navbar": "^2.3.0",
+    "astro-seo": "^0.8.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   }
