--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "astro": "^3.6.0",
     "astro-navbar": "^2.3.0",
     "astro-seo": "^0.8.0",
+    "socket.io": "^4.7.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   }
