--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/node": "^6.0.4",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.6.0",
     "astro-navbar": "^2.3.0",
     "astro-seo": "^0.8.0",
+    "express": "^4.18.2",
+    "node": "^21.2.0",
     "socket.io": "^4.7.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
